--- a/minivolejbal.html
+++ b/minivolejbal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>minivolejbal</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,6 +43,9 @@
         <li class="nav-item">
           <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="specializace.html">specializace</a>
+      </li>
       </ul>
     </div>
   </nav>
