--- a/plazova.html
+++ b/plazova.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>plazovy  </title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,67 +15,58 @@
 </head>
 
 <body>
-    
-  <nav class="navbar navbar-expand-lg navbar-light bg-danger sticky-top">
-    <a class="navbar-brand" href="img/logo1.jpg">logo</a>
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">základy</a>
-          <span class="sr-only">(current)</span>
-          </a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="rozdeleni.html" id="dropdownId" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">rozdělení</a>
-          <div class="dropdown-menu" aria-labelledby="dropdownId">
-            <a class="dropdown-item" href="#"> Minivolejbal</a>
-            <a class="dropdown-item" href="#">Volejbalové debly</a>
-            <a class="dropdown-item" href="#"> Plážový volejbal</a>
-            <a class="dropdown-item" href="#">Smíšený volejbal</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <nav class="navbar navbar-expand-lg navbar-light bg-danger sticky-top">
-    <a class="navbar-brand" href="img/logo1.jpg">logo</a>
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">základy</a>
-          <span class="sr-only">(current)</span>
-          </a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="rozdeleni.html" id="dropdownId" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">rozdělení</a>
-          <div class="dropdown-menu" aria-labelledby="dropdownId">
-            <a class="dropdown-item" href="#"> Minivolejbal</a>
-            <a class="dropdown-item" href="#">Volejbalové debly</a>
-            <a class="dropdown-item" href="#"> Plážový volejbal</a>
-            <a class="dropdown-item" href="#">Smíšený volejbal</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <!doctype html>
+  <html lang="cs">
+  
+  <head>
+    <title>Projekt IT1:  </title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="co obsahuje táto stránka">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="css/muj.css">
+  
+  </head>
+  
+  <body>
+  
+      <nav class="navbar navbar-expand-lg navbar-light bg-danger sticky-top">
+        <a class="navbar-brand" href="index.html"><img class="mojelogo" src="img/logo1.jpg" alt="logo"></a>
+        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">základy</a>
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+               
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="rozdeleni.html" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">rozdělení</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="minivolejbal.html"> Minivolejbal</a>
+                        <a class="dropdown-item" href="debly.html">Volejbalové debly</a>
+                        <a class="dropdown-item" href="plazova.html"> Plážový volejbal</a>
+                        <a class="dropdown-item" href="smiseny.html">Smíšený volejbal</a>
+                        <a class="dropdown-item" href="sitting.html">Sitting volejbal</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="specializace.html">specializace</a>
+            </li>
+            </ul>
+     </div>
+      </nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
