--- a/zajimavosti.html
+++ b/zajimavosti.html
@@ -1,51 +1,57 @@
-<!doctype html>
-<html lang="en">
 
-<head>
-  <title>zajimavosti</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!doctype html>
+  <html lang="cs">
+  
+  <head>
+    <title>zajimavosti</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="co obsahuje táto stránka">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="css/muj.css">
-</head>
-
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-danger sticky-top">
-    <a class="navbar-brand" href="img/logo1.jpg">logo</a>
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">základy</a>
-          <span class="sr-only">(current)</span>
-          </a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="rozdeleni.html" id="dropdownId" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">rozdělení</a>
-          <div class="dropdown-menu" aria-labelledby="dropdownId">
-            <a class="dropdown-item" href="#"> Minivolejbal</a>
-            <a class="dropdown-item" href="#">Volejbalové debly</a>
-            <a class="dropdown-item" href="#"> Plážový volejbal</a>
-            <a class="dropdown-item" href="#">Smíšený volejbal</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  
+  </head>
+  
+  <body>
+  
+      <nav class="navbar navbar-expand-lg navbar-light bg-danger sticky-top">
+        <a class="navbar-brand" href="index.html"><img class="mojelogo" src="img/logo1.jpg" alt="logo"></a>
+        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">základy</a>
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+               
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="rozdeleni.html" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">rozdělení</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="minivolejbal.html"> Minivolejbal</a>
+                        <a class="dropdown-item" href="debly.html">Volejbalové debly</a>
+                        <a class="dropdown-item" href="plazova.html"> Plážový volejbal</a>
+                        <a class="dropdown-item" href="smiseny.html">Smíšený volejbal</a>
+                        <a class="dropdown-item" href="sitting.html">Sitting volejbal</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="specializace.html">specializace</a>
+            </li>
+            </ul>
+     </div>
+      </nav>
 
   <header class="jumbotron-fluid p-3 bg-danger text-center">
     <h1 class="dislay-2 text-white">Volejbal <small>a vše o něm</small></h1>
@@ -60,51 +66,22 @@
         iure consequuntur dolorem et ad consequatur expedita ex quia quos. Quaerat pariatur est inventore laudantium,
         enim deleniti. Velit quisquam omnis aspernatur dicta sit debitis? Nobis pariatur itaque a repudiandae
         quasi autem eum expedita facilis asperiores.</p>
-      <h3 class="text-lowercase text-justify">specializace hráču</h3>
-
-      <div class="col-md">
-
-        <h2>nahrávač</h2>
-        <p class="text-lowercase text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam fuga,
-          quisquam rerum harum doloremque est
-          iure consequuntur dolorem et ad consequatur expedita ex quia quos. Quaerat pariatur est inventore laudantium,
-          enim deleniti. Velit quisquam omnis aspernatur dicta sit debitis? Nobis pariatur itaque a repudiandae
-          quasi autem eum expedita facilis asperiores.</p>
-      </div>
-      <div class="col-md">
-        <h2>univerzál</h2>
-        <p class="text-lowercase text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam fuga,
-          quisquam rerum harum doloremque est
-          iure consequuntur dolorem et ad consequatur expedita ex quia quos. Quaerat pariatur est inventore laudantium,
-          enim deleniti. Velit quisquam omnis aspernatur dicta sit debitis? Nobis pariatur itaque a repudiandae
-          quasi autem eum expedita facilis asperiores.</p>
-      </div>
-      <div class="col-md">
-        <h2>smečař</h2>
-        <p class="text-lowercase text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam fuga,
-          quisquam rerum harum doloremque est
-          iure consequuntur dolorem et ad consequatur expedita ex quia quos. Quaerat pariatur est inventore laudantium,
-          enim deleniti. Velit quisquam omnis aspernatur dicta sit debitis? Nobis pariatur itaque a repudiandae
-          quasi autem eum expedita facilis asperiores.</p>
-      </div>
-      <div class="col-md">
-        <h2>blokař</h2>
-        <p class="text-lowercase text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam fuga,
-          quisquam rerum harum doloremque est
-          iure consequuntur dolorem et ad consequatur expedita ex quia quos. Quaerat pariatur est inventore laudantium,
-          enim deleniti. Velit quisquam omnis aspernatur dicta sit debitis? Nobis pariatur itaque a repudiandae
-          quasi autem eum expedita facilis asperiores.</p>
-      </div>
-      <div class="col-md">
-        <h2>libero</h2>
-        <p class="text-lowercase text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam fuga,
-          quisquam rerum harum doloremque est
-          iure consequuntur dolorem et ad consequatur expedita ex quia quos. Quaerat pariatur est inventore laudantium,
-          enim deleniti. Velit quisquam omnis aspernatur dicta sit debitis? Nobis pariatur itaque a repudiandae
-          quasi autem eum expedita facilis asperiores.</p>
-      </div>
+    
 
   </main>
+    <footer class="bg-dark container-fluid p3">
+      <footer class="container-fluid bg-dark mt-4">
+        <div class="row text-muted p-5">
+    <div class="col-sm-2">
+      <h5 class="border-bottom border-info p-2">odkazy na více informací </h5>
+      <p class="text-info">
+        <i class="fa fa-facebook-official fa-3x float-left p-2"></i>
+        <i class="fa fa-twitter-square fa-3x float-left p-2"></i>
+        <i class="fa fa-instagram fa-3x float-left p-2"></i>
+      </p>
+    </div>
+  </div>
+  </footer>
 
 
 
