--- a/typy/rozdeleni.html
+++ b/typy/rozdeleni.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">základy</a>
+                <a class="nav-link" href="../index.html">základy</a>
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
@@ -41,14 +41,25 @@
                 </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="zajimavosti.html">zajímavosti</a>
+              <a class="nav-link" href="../dalsi/zajimavosti.html">zajímavosti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="specializace.html">specializace/a>
+            <a class="nav-link" href="../dalsi/specializace.html">specializace</a>
         </li>
         </ul>
  </div>
   </nav>
+  <header class="jumbotron-fluid p-3 bg-danger text-center">
+    <h1 class="dislay-2 text-white">Volejbal <small>a vše o něm</small></h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger sticky-top">
+      
+        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+
+  </header>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
