--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 
 <head>
-  <title>Projekt IT1: </title>
+  <title>VOLEJBAL: zakladni inf | typy | zajimavosti </title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
