--- a/typy/sitting.html
+++ b/typy/sitting.html
@@ -14,7 +14,7 @@
     <html lang="cs">
     
     <head>
-      <title>Projekt IT1:  </title>
+      <title>sitting: co to je  </title>
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
